--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/agzsoftsi/GraphQL-Mongo-DataAccess/issues"
   },
-  "homepage": "https://github.com/agzsoftsi/GraphQL-Mongo-DataAccess#readme"
+  "homepage": "https://github.com/agzsoftsi/GraphQL-Mongo-DataAccess#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "express-graphql": "^0.9.0",
+    "graphql": "^15.0.0"
+  }
 }
